# NGlobe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
backend/: config.py  config.toml  main.py  models.py  pyproject.toml
backend/api/: app.py  dependencies.py
backend/api/routes/: analytics.py  geoip.py  health.py  requests.py  settings.py  ws.py
backend/api/websocket/: manager.py
backend/capture/: addon.py  proxy_runner.py
backend/database/: connection.py  reader.py  writer.py
backend/geoip/: download.py  resolver.py
backend/pipeline/: event_bus.py  event_pipeline.py
backend/startup/: cert_installer.py  cert_manager.py  conflict_checker.py  orchestrator.py  proxy_manager.py
backend/utils/: logging.py  resource_path.py
data/: networkglobe.db-shm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalyticsPanel.tsx  DiagnosticsPanel.tsx  ErrorBoundary.tsx  GeoIPSetup.tsx  GlobeMap.tsx  Header.tsx  SetupWizard.tsx  Sidebar.tsx  StartupScreen.tsx  StatusBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: requestStore.ts
frontend/src/types/: index.ts
src/nglobe/: __init__.py  config.py  config.toml  main.py  requirements.txt
src/nglobe/api/: app.py  dependencies.py
src/nglobe/api/routes/: analytics.py  geoip.py  health.py  requests.py  settings.py  setup.py  ws.py
src/nglobe/api/websocket/: manager.py
src/nglobe/capture/: addon.py  models.py  proxy_runner.py
src/nglobe/data/: networkglobe.db-shm
src/nglobe/database/: connection.py  reader.py  schema.py  writer.py
src/nglobe/geoip/: __init__.py  download.py  models.py  resolver.py
src/nglobe/pipeline/: event_bus.py  event_pipeline.py
src/nglobe/startup/: __init__.py  cert_installer.py  cert_manager.py  conflict_checker.py  orchestrator.py  proxy_manager.py
src/nglobe/utils/: logging.py  resource_path.py
