[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nglobe"
version = "0.1.0"
description = "A beautiful, real-time 3D visualization of your machine's network traffic."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Shashwat Gupta", email = "shashwat@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "mitmproxy>=10.3.0",
    "geoip2>=4.8.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "rich>=13.7.1",
    "sqlmodel>=0.0.19",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/shashwat/nglobe"
Repository = "https://github.com/shashwat/nglobe.git"

[project.scripts]
nglobe = "nglobe.main:main"

[tool.hatch.build]
artifacts = [
    "src/nglobe/ui/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/nglobe"]
