[project]
name = "networkglobe"
version = "0.1.0"
description = "Real-time MITM proxy visualization platform"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NetworkGlobe Team" }]

dependencies = [
    "mitmproxy>=11.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "maxminddb>=2.6",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "psutil>=6.1",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "pyinstaller>=6.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
